added methods for comment creation and reply