@@ -4,18 +4,37 @@ import com.gustavolyra.e_commerce_api.dto.comments.CommentDto;
 import com.gustavolyra.e_commerce_api.entities.Product;
 import lombok.Getter;
 
-import java.util.ArrayList;
+import java.io.Serial;
+import java.io.Serializable;
 import java.util.List;
+import java.util.UUID;
+import java.util.stream.Collectors;
 
 @Getter
-public class ProductDtoWithComments extends ProductDtoResponse {
-    private List<CommentDto> comments = new ArrayList<>();
+public class ProductDtoWithComments implements Serializable {
+    @Serial
+    private static final long serialVersionUID = 1L;
+    private UUID id;
+    private String name;
+    private String description;
+    private String productType;
+    private String seller;
+    private String pictureUrl;
+    private int stock;
+    private List<CommentDto> comments;
 
     public ProductDtoWithComments(Product product) {
-        super(product);
-        if (product.getComments() != null) {
-            this.comments = product.getComments().stream().map(CommentDto::new).toList();
-        }
+        this.id = product.getUuid();
+        this.name = product.getName();
+        this.description = product.getDescription();
+        this.productType = product.getType().name();
+        this.seller = product.getUser().getUsername();
+        this.pictureUrl = product.getProductPictueUrl();
+        this.stock = product.getStock();
+        this.comments = product.getComments().stream()
+                .filter(comment -> comment.getParentComment() == null)
+                .map(CommentDto::new)
+                .collect(Collectors.toList());
     }
 
 }
